# Baby_Photoshop

./: .gitignore  CMakeLists.txt  CS213_A1_Part1_17_20240354_20240398_20240707.cpp  CS213_A1_Part1_X_20240354_20240398_20240707.cpp  CS213_A1_Part2_S21_20240354_20240398_20240707.cpp  CS213_A1_Part2_S28_20240354_20240398_20240707.cpp  Image_Class.h  README.md  main.cpp
Baby_Photoshop_fix/: CMakeLists.txt  FirstMenu.qml  Main.qml  SecondMenu.qml  app_icon.rc  artisticeffects.cpp  artisticeffects.h  image_class.cpp  image_class.h  main.cpp  manager.cpp  manager.h  menu.cpp  menu.h  overlay.cpp  overlay.h  toneandcoloradjustments.cpp  toneandcoloradjustments.h  transformoperations.cpp  transformoperations.h
header/Image_Class/: Image_Class.h
header/Winged_Dragon/: ArtisticEffects.h  Filter.h  Manager.h  Menu.h  Model.h  Overlay.h  ToneAndColorAdjustments.h  TransformOperations.h
src/: ArtisticEffects.cpp  Filter.cpp  Manager.cpp  Menu.cpp  Overlay.cpp  ToneAndColorAdjustments.cpp  TransformOperations.cpp  stb_impl.cpp
